--- a/index.html
+++ b/index.html
@@ -512,9 +512,9 @@
     <section class="carousel" id="carousel">
       <div class="caroContainer">
         <div class="caroContent1">
-          <img class="slide" id="slide1" src="/image/e1.png" alt="world" />
-          <img class="slide" id="slide2" src="/image/e2.png" alt="world1" />
-          <img class="slide" id="slide3" src="/image/e3.png" alt="world2" />
+          <img class="slide" id="slide1" src="image/e1.png" alt="world" />
+          <img class="slide" id="slide2" src="image/e2.png" alt="world1" />
+          <img class="slide" id="slide3" src="image/e3.png" alt="world2" />
           <div class="caroIcon">
             <a href="#slide1"
               ><i class="fa-solid fa-circle" style="color: #ddb505"></i>
