--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
             <div class="name3">Stephen Curry</div>
             <div class="comment3">
               A true game changer - revolutionizing the way things are done,
-              pushing boundaries, and paving the path to success and innovation.
+              pushing boundaries, and paving the path to success.
             </div>
           </div>
           <div class="box">
