--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <body>
     <div class="background">
       <nav class="navBar">
-        <a href="#" class="logo" id="logo"></a>
+        <a href="#" class="logo" id="logo"
+          ><span class="brand">TECHNOWORLD</span></a
+        >
         <div class="navbar-list">
           <ul class="navbar-item">
             <li>
