--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <div class="lineSep"></div>
 
     <section class="Student" id="Student1">
-      <div class="student-header">Student Section</div>
+      <div class="student-header">TECH on Student</div>
       <br /><br />
       <div class="container">
         <div class="container1">
@@ -229,10 +229,9 @@
     </section>
 
     <section class="parent" id="parent">
+      <h1 class="parentsSec">TECH for Parents</h1>
       <div class="parentSec">
-        <div class="parentPic">
-          <h1 class="parentsSec">Parent Section</h1>
-        </div>
+        <div class="parentPic"></div>
         <div class="accordion1">
           <ul id="accordion">
             <li>
@@ -419,7 +418,7 @@
       </div>
     </section>
     <br /><br />
-    <h1 class="businessSec" id="businessSection">Business Section</h1>
+    <h1 class="businessSec" id="businessSection">Business TECH</h1>
     <br /><br /><br />
     <section class="businessSec">
       <div class="bcontainer">
