--- a/index.html
+++ b/index.html
@@ -12,66 +12,74 @@
   </head>
   <body>
     <div class="background">
-      <nav class="navBar">
-        <a href="#" class="logo" id="logo"
-          ><span class="brand">TECHNOWORLD</span></a
-        >
-        <div class="navbar-list">
-          <ul class="navbar-item">
-            <li>
-              <a href="#Student1">Student</a>
-            </li>
-            <li><a href="#parent">Parents</a></li>
-            <li><a href="#businessSection">Business</a></li>
-            <li><a href="#commentSec">About</a></li>
-          </ul>
-        </div>
-        <!--Sign up Button-->
-
-        <div class="sign-log">
-          <input type="checkbox" id="show1" />
-          <label for="show1" class="show-btn1">Sign up</label>
-          <div class="signcontainer">
-            <label for="show1" class="closeBtn" title="close">&times;</label>
-
-            <h1 class="welsign">Free Sign Up</h1>
-            <form action="#">
-              <label>First Name:</label>
-              <input type="text" placeholder="Lebron" />
-              <label>Last Name:</label>
-              <input type="text" placeholder="James" />
-              <label>Email Address:</label>
-              <input type="text" placeholder="google@gmail.com" />
-              <label>Password:</label>
-              <input type="password" />
-              <label>Confirm Password:</label>
-              <input type="password" />
-              <button>Submit</button>
-            </form>
+      <video autoplay muted loop plays-inline id="video">
+        <source src="/image/vid.mp4" type="video/mp4" />
+      </video>
+      <div class="navbarAbsolute">
+        <nav class="navBar">
+          <a href="#" class="logo" id="logo"
+            ><span class="brand">TECHNOWORLD</span></a
+          >
+          <div class="navbar-list">
+            <ul class="navbar-item">
+              <li>
+                <a href="#Student1">Student</a>
+              </li>
+              <li><a href="#parent">Parents</a></li>
+              <li><a href="#businessSection">Business</a></li>
+              <li><a href="#commentSec">About</a></li>
+            </ul>
           </div>
-        </div>
-        <!--End of Sign up button-->
+          <!--Sign up Button-->
 
-        <!--Log in Buttom-->
-        <div class="sign-log">
-          <input type="checkbox" id="show" />
-          <label for="show" class="show-btn2">Log In</label>
-          <div class="logContainer">
-            <label for="show" class="closeBtn" title="close">&times;</label>
-            <h1 class="welsign1">Welcome</h1>
-            <form action="#">
-              <label>Email or Phone</label>
-              <input type="text" />
-              <label>Password</label>
-              <input type="password" />
-              <a href="#">Forgot Password</a>
-              <button>Log in</button>
-              <div class="link">Not a Member? <a href="#">Sign Up Here</a></div>
-            </form>
+          <div class="sign-log">
+            <input type="checkbox" id="show1" />
+            <label for="show1" class="show-btn1">Sign up</label>
+            <div class="signcontainer">
+              <label for="show1" class="closeBtn" title="close">&times;</label>
+
+              <h1 class="welsign">Free Sign Up</h1>
+              <form action="#">
+                <label>First Name:</label>
+                <input type="text" placeholder="Lebron" />
+                <label>Last Name:</label>
+                <input type="text" placeholder="James" />
+                <label>Email Address:</label>
+                <input type="text" placeholder="google@gmail.com" />
+                <label>Password:</label>
+                <input type="password" />
+                <label>Confirm Password:</label>
+                <input type="password" />
+                <button>Submit</button>
+              </form>
+            </div>
           </div>
-        </div>
-        <!--End of Log in-->
-      </nav>
+          <!--End of Sign up button-->
+
+          <!--Log in Buttom-->
+          <div class="sign-log">
+            <input type="checkbox" id="show" />
+            <label for="show" class="show-btn2">Log In</label>
+            <div class="logContainer">
+              <label for="show" class="closeBtn" title="close">&times;</label>
+              <h1 class="welsign1">Welcome</h1>
+              <form action="#">
+                <label>Email or Phone</label>
+                <input type="text" />
+                <label>Password</label>
+                <input type="password" />
+                <a href="#">Forgot Password</a>
+                <button>Log in</button>
+                <div class="link">
+                  Not a Member? <a href="#">Sign Up Here</a>
+                </div>
+              </form>
+            </div>
+          </div>
+
+          <!--End of Log in-->
+        </nav>
+      </div>
       <div class="heroContent">
         <div class="banner">Change the World</div>
         <div class="bannerSub">with</div>
