background video one

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="background">
       <video autoplay muted loop plays-inline id="video">
-        <source src="/image/vid.mp4" type="video/mp4" />
+        <source src="image/vid.mp4" type="video/mp4" />
       </video>
       <div class="navbarAbsolute">
         <nav class="navBar">
